--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "yarn": "4.1.0"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
     "@turbo/gen": "^1.12.4",
-    "turbo": "^1.12.4"
+    "turbo": "^1.12.4",
+    "typescript": "~5.3.3"
   }
 }
