--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
-    "@turbo/gen": "^1.12.4",
-    "turbo": "^1.12.4",
+    "@turbo/gen": "^1.12.5-canary.0",
+    "turbo": "^1.12.5-canary.0",
     "typescript": "~5.3.3"
   }
 }
